Fix awkward padding on mobile

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -1677,7 +1677,7 @@ p.small {
   border-radius: 0;
 
   &.sidebar-open {
-    left: 0px;
+    left: 0px;  
     }
   }
 
@@ -1691,6 +1691,7 @@ p.small {
   position: relative;
   padding: 0;
   height: 100%;
+  transition: all 1s linear;
 
   &.sidebar-open {
     left: 250px;
@@ -1711,7 +1712,7 @@ p.small {
   }
   
 #mobile-wrapper {
-  padding: 20px 10px 10px 10px;
+  padding: 30px 20px 0 20px;
   }
 
 #menu-toggle {
@@ -1764,7 +1765,6 @@ table.rent-status {
 	min-width: 0;
 	white-space: normal;
 	font-size: 85%;
-	margin: 0 auto;
 	}
 	
 .rent-status td.month,
